--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,6 @@ main .main .all_main .meesing_logo {
 }
 main .main .all_main span {
   width: 140px;
-  height: 25px;
   color: rgba(86, 91, 95, 0.473);
   font-weight: 400;
   font-size: 10px;
@@ -199,29 +198,37 @@ main .main .all_main .main_border p {
   margin: 0;
   line-height: 19px;
 }
-main .main .all_main .main_border div {
+main .main .all_main .main_border .span_a {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  padding: 5px;
 }
-main .main .all_main .main_border div span {
-  padding: 10px;
+main .main .all_main .main_border .span_a div {
+  display: flex;
+  align-items: center;
+}
+main .main .all_main .main_border .span_a div span {
+  display: block;
+  padding: 2px;
   letter-spacing: 1px;
   flex-wrap: nowrap;
   font-weight: 400;
   font-size: 12px;
   color: #004250;
-  margin-top: 20px;
 }
-main .main .all_main .main_border div a {
+main .main .all_main .main_border .span_a a {
   text-decoration: none;
   text-align: center;
   padding: 10px 10px;
   width: 84px;
+  bottom: 80px;
   font-size: 12px;
-  margin-top: 20px;
+  box-sizing: border-box;
+  display: block;
   color: #FFFFFF;
   border: #004250;
-  padding: 12px 12px;
   border-radius: 20.8333px;
   background: #004250;
 }
