--- a/css/style.scss
+++ b/css/style.scss
@@ -978,15 +978,31 @@ main {
       }
 
       .list{
+       margin-top: 10px;
+       display: flex;
+       gap: 10px;
         .list_all{
+          background: #292A2D;
+          width: 33px;
+          height: 4px;
 
         }
 
-        .half_list{
-
+        .half_all{
+          background: #292A2D;
+          width: 33px;
+          height: 4px;
           .half{
+            background: $a;
+            width: 50%;
+            height: inherit;
 
           }
+
+          
+
+          // listerna mnacel
+       
         }
       }
     }
@@ -1014,6 +1030,121 @@ main {
 
 
     }
+
+  }
+  .end_main_seventh{
+   background: #313236;
+
+
+    h4{
+      padding-top: 50px;
+      font-weight: 400;
+      font-size: 10px;
+      line-height: 12px;
+      color: $a;
+      text-align: center;
+
+    }
+    h2{
+      font-style: normal;
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 50px; 
+      color: $a;
+      text-align: center;
+     
+
+    }
+
+    .end_main_seventh_items{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap:50px;
+
+      .end_main_seventh_item{
+      width: 368px;
+      height: 343px;
+      padding: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 8.33333px;
+
+      p{
+        font-weight: 400;
+        font-size: 23px;
+        line-height: 30px;
+        color: $a;
+
+      }
+
+      div{
+        margin-top: 120px;
+        h6{
+          margin: 0;
+          font-weight: 400;
+          color: $a;
+          font-size: 12px;
+          line-height: 19px;
+
+        }
+        p{
+          font-weight: 400;
+          font-size: 13px;
+          line-height: 19px;
+          color: $a;
+          margin: 0;
+
+        }
+      }
+
+
+
+       }
+      }
+      @media screen  and (max-width:1105px){
+        .end_main_seventh_items{
+          flex-wrap: wrap;
+        }
+
+        
+      }
+      @media screen  and (max-width:$mobilaL){
+        .end_main_seventh_items{
+          .end_main_seventh_item{
+            width: 250px;
+            height: 250px;
+            p{
+              font-weight: 400;
+              font-size: 15px;
+              line-height: 20px;
+              color: $a;
+      
+            }
+           div{
+            margin-top: 70px;
+            h6{
+              font-size: 9px;
+
+
+            }
+
+            p{
+              font-size: 10px;
+              
+            }
+           }
+      
+           
+          }
+        }
+
+        
+      }
+
+
+
+
+
 
   }
 
