--- a/css/style.scss
+++ b/css/style.scss
@@ -1008,6 +1008,7 @@ main {
     }
 
   }
+
   @media screen and (max-width:700px){
     .end_main_frist{
       height: 1000px;
@@ -1018,6 +1019,7 @@ main {
     }
 
   }
+
   @media screen and (max-width:$mobilaM){
     .end_main_frist{
       gap: 0px;
@@ -1032,16 +1034,19 @@ main {
     }
 
   }
+
   .end_main_seventh{
    background: #313236;
+   padding: 80px;
 
 
     h4{
-      padding-top: 50px;
+      padding-top: 100px;
       font-weight: 400;
       font-size: 10px;
       line-height: 12px;
       color: $a;
+      margin: 0;
       text-align: center;
 
     }
@@ -1140,7 +1145,38 @@ main {
 
         
       }
+      @media screen  and (max-width:330px){
+        .end_main_seventh_items{
+          .end_main_seventh_item{
+            width: 250px;
+            height: 350px;
+            p{
+              font-weight: 400;
+              font-size: 15px;
+              line-height: 20px;
+              color: $a;
+      
+            }
+           div{
+            margin-top: 70px;
+            h6{
+              font-size: 9px;
 
+
+            }
+
+            p{
+              font-size: 10px;
+              
+            }
+           }
+      
+           
+          }
+        }
+
+        
+      }
 
 
 
@@ -1150,6 +1186,218 @@ main {
 
 
 
+  .end_main{
+    margin-top: 66px;
+ 
+
+  
+   
+
+
+    h5{
+    text-align: center;
+    color: #463F3C;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 30px;
+      }
+
+      .end_main_items{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 6px;
+        padding: 80px ;
+        max-width: 1200px;
+
+        .end-main_item{
+
+          background: #879EAD;
+          max-width: 250px;
+          height: 364px;
+          // position: absolute;
+          margin: 12px;
+          padding: 7px;
+  
+          p{
+            color: $a;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 28px;
+            
+            padding-left: 27px;
+            padding-top: 23px;
+            margin: 0;
+           
+          }
+          img{
+                position: relative;
+                left: -15;
+       
+          }
+
+          
+          a{
+            text-decoration: none;
+            position: relative;
+            right:  50px; 
+            bottom: 40px; 
+            color: $first;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 12px;
+
+
+          }
+
+        }
+        .end-main_item_two{
+          
+          background: #1A5866;
+          width: 248px;
+          height: 364px;
+          
+          margin: 12px ;
+          padding: 7px;
+  
+          p{
+            color: $a;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 28px;
+            
+            padding-left: 27px;
+            padding-top: 23px;
+            margin: 0;
+           
+          }
+          img{
+            position: relative;
+            width:initial;
+            padding-top: 29px;
+
+               
+       
+          }
+
+          
+          a{
+            text-decoration: none;
+            position: relative;;
+       
+            right:  50px; 
+            bottom: 40px; 
+            color: $first;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 12px;
+
+
+          }
+
+        }
+        .end-main_item_three{
+          
+          background: #776C62;
+          width: 248px;
+          height: 364px;
+          
+          margin: 12px ;
+          padding: 7px;
+  
+          p{
+            color: $a;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 28px;
+            
+            padding-left: 27px;
+            padding-top: 23px;
+            margin: 0;
+           
+          }
+          img{
+            position: relative;
+            width:initial;
+            padding-top: 29px;
+
+               
+       
+          }
+
+          
+          a{
+            text-decoration: none;
+            position: relative;;
+       
+            right:  50px; 
+            bottom: 40px; 
+            color: $first;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 12px;
+
+
+          }
+
+        }
+        .end-main_item_four{
+          
+          background: #99958E;
+          width: 248px;
+          height: 364px;
+          
+          margin: 12px ;
+          padding: 7px;
+  
+          p{
+            color: $a;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 28px;
+            
+            padding-left: 27px;
+            padding-top: 23px;
+            margin: 0;
+           
+          }
+          img{
+            position: relative;
+            width:initial;
+            padding-top: 29px;
+
+               
+       
+          }
+
+          
+          a{
+            text-decoration: none;
+            position: relative;;
+       
+            right:  50px; 
+            bottom: 40px; 
+            color: $first;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 12px;
+
+
+          }
+
+        }
+        @media  screen and (max-width: 1115px){
+          flex-wrap: wrap;
+        }
+      }
+      
+
+
+
+
+
+
+  }
 
 * {
   box-sizing: border-box;
