--- a/css/style.css
+++ b/css/style.css
@@ -897,6 +897,60 @@ main .main_tree .main_three_left .main-three_link a.learn_more {
   }
 }
 
+footer .footer {
+  padding-top: 100px;
+}
+footer .footer .footer_big_items {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer .footer .footer_big_items svg {
+  position: absolute;
+}
+footer .footer .footer_big_items .footer_items {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+footer .footer .footer_big_items .footer_items h5 {
+  display: block;
+  color: #004250;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+}
+footer .footer .footer_big_items .footer_items a {
+  padding-top: 10px;
+  display: block;
+  text-decoration: none;
+  color: #292A2D;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+}
+footer .footer .footer_big_item {
+  padding-top: 10px;
+}
+footer .footer .footer_big_item .footer_big_item_linkss {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+footer .footer .footer_big_item .footer_big_item_linkss a svg {
+  position: none;
+}
+footer .footer .footer_big_item .footer_big_item_link a {
+  display: block;
+  text-decoration: none;
+  color: #ADB2B7;
+  font-weight: 400;
+  font-size: 7px;
+  line-height: 11px;
+}
+
 * {
   box-sizing: border-box;
 }
