--- a/css/style.css
+++ b/css/style.css
@@ -898,30 +898,28 @@ main .main_tree .main_three_left .main-three_link a.learn_more {
 }
 
 footer .footer {
-  padding-top: 100px;
-}
-footer .footer .footer_big_items {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-footer .footer .footer_big_items svg {
-  position: absolute;
-}
-footer .footer .footer_big_items .footer_items {
+  width: 1066.06px;
+  height: 480.18px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 200px;
+  padding-top: 100px;
+}
+footer .footer .footer_items {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   gap: 50px;
 }
-footer .footer .footer_big_items .footer_items h5 {
+footer .footer .footer_items .footer_item h5 {
   display: block;
   color: #004250;
   font-weight: 400;
   font-size: 10px;
   line-height: 12px;
 }
-footer .footer .footer_big_items .footer_items a {
+footer .footer .footer_items .footer_item a {
   padding-top: 10px;
   display: block;
   text-decoration: none;
@@ -931,24 +929,25 @@ footer .footer .footer_big_items .footer_items a {
   line-height: 12px;
 }
 footer .footer .footer_big_item {
-  padding-top: 10px;
+  bottom: 100px;
 }
 footer .footer .footer_big_item .footer_big_item_linkss {
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
 }
-footer .footer .footer_big_item .footer_big_item_linkss a svg {
-  position: none;
-}
-footer .footer .footer_big_item .footer_big_item_link a {
+footer .footer .footer_big_item_link a {
   display: block;
   text-decoration: none;
   color: #ADB2B7;
   font-weight: 400;
   font-size: 7px;
   line-height: 11px;
+}
+@media screen and (max-width: 1098px) {
+  footer .footer .footer .footer_items {
+    flex-wrap: wrap;
+  }
 }
 
 * {
