--- a/css/style.scss
+++ b/css/style.scss
@@ -404,7 +404,6 @@ main {
     }
 
 
-
     .meesing_logo {
       width: 60px;
       height: 60px;
@@ -1401,24 +1400,30 @@ main {
 
   footer{
     .footer{
+      
+      width: 1066.06px;
+      height: 480.18px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 200px;
+
       padding-top: 100px;
-      .footer_big_items{
-        position: relative;
-        svg{
-          position: absolute;
-        }
+      .footer_items{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        gap: 50px;
+        
+       
        
         
 
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        
       
          
-        .footer_items{
-          display: flex;
-          justify-content: center;
-          gap: 50px;
+        .footer_item{
+        
        
 
           h5{
@@ -1447,35 +1452,56 @@ main {
       }
 
       .footer_big_item{
-        padding-top:10px ;
+        bottom: 100px;
+      
+ 
         .footer_big_item_linkss{
-          display: flex;
-          justify-content: center;
+       
+          justify-content:space-between;
           align-items: center;
-          gap: 20px;
+          gap: 30px;
           a{ 
           
             svg{
-              position: none;
-
+           
+  
             }
           }
         }
-        .footer_big_item_link{
-          a{
-            display: block;
-            text-decoration: none;
-            color: #ADB2B7;
-            font-weight: 400;
-            font-size: 7px;
-            line-height: 11px;
-          }
-        }
+        
+     
 
 
 
       }
+      .footer_big_item_link{
+         
 
+        a{
+          display: block;
+          text-decoration: none;
+          color: #ADB2B7;
+          font-weight: 400;
+          font-size: 7px;
+          line-height: 11px;
+        }
+      }
+     
+
+      @media screen and (max-width:1098px) {
+        .footer{
+
+          .footer_items{
+            flex-wrap: wrap;
+          }
+          
+        }
+        
+        
+        
+  
+        
+      }
     }
   }
 
